# STITCHIT

./: CMakeLists.txt  ModelFitting_NestedSTITCHIT.R  ModelTest_NestedSTITCHIT.R  ModelTest_NestedSTITCHIT_ElaNet.R  NestedSTITCHIT.py  README.md  Two_level_learning.R
BigWig/: CMakeLists.txt  bigWig.h  bwCommon.h  bwRead.c  bwStats.c  bwValues.c  bwValues.h  bwWrite.c  io.c
SPAN/: .Data.h.swp  CMakeLists.txt  Data.cpp  Data.h  Fraction.cpp  Fraction.h  Makefile  README.md  Segment.cpp  Segment.h  Span.cpp  Span.h  Wall_Time.h  defs.h  runSPAN.py
core/: BinSelection.cpp  BinSelection.h  CMakeLists.txt  CorComp.cpp  CorComp.h  ExpressionReader.cpp  ExpressionReader.h  GTFReader.cpp  GTFReader.h  GeneHancerReader.cpp  GeneHancerReader.h  GenomeSizeReader.cpp  GenomeSizeReader.h  PeakReader.cpp  PeakReader.h  RemReader.cpp  RemReader.h  SPANInputGenerator.cpp  SPANInputGenerator.h  coverage_Computation_from_bw.cpp  geneHancer_Annotation.cpp  generateSPANInput.cpp  main.cpp  peak_Combination.cpp  testDataGeneration.cpp
data/: ENSGIds_GeneName.txt  rewriteGeneHancer.py
test/: CMakeLists.txt  LEGTest.cmake  binSelectionTest.cpp  config.h.in  corCompTest.cpp  dataTest.cpp  expressionReaderTest.cpp  geneHancerReaderTest.cpp  generateSPANInputTest.cpp  genomeSizeReaderTest.cpp  gtfReaderTest.cpp  peakReaderTest.cpp  spanInputGeneratorTest.cpp  spanTest.cpp
test/data/: Expression_Data_MultiClass.txt  Expression_Data_One_Sample_Missing.txt  Expression_Data_Phony_Sample.txt  Expression_Data_Sample.txt  Expression_Data_Sample_Double.txt  Integrated_featureMatrix_ENSG00000107581_5000.tab  Integrated_featureMatrix_ENSG00000107581_5000_V2.tab  OverviewSignalFiles.txt  Phony_chrSize.txt  broken_peakFile.txt  gencode.sampleV26.Phony1.gtf  gencode.sampleV26.Phony2.gtf  gencode.sampleV26.gtf  geneHancerSample.bed  peakFile1.txt  peakFile2.txt
test/data/BigWigFiles/: B_S004BT12.bw  B_S00CWT11.bw  B_S00DFM11.bw
test/data/WigFiles/: B_S00CWT11.wig  B_S00DFM11.wig  B_S00Y4Y11.wig
